# design-dynamodb

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  pyproject.toml  setup.cfg
app/: __main__.py
app/adapters/: mappers.py
app/adapters/api/: __main__.py  bootstrap.py  containers.py  security.py
app/adapters/api/controllers/: __init__.py
app/adapters/api/controllers/v1/: __init__.py  brands.py  categories.py  orders.py  products.py  users.py
app/adapters/db/models/: __init__.py  base.py  brands.py  categories.py  orders.py  products.py  users.py
app/adapters/presenters/: base.py  brands.py  categories.py  orders.py  products.py  users.py
app/adapters/repositories/: base.py  brands.py  categories.py  orders.py  products.py  users.py
app/common/: configs.py  constants.py  enums.py  exceptions.py  logger.py
app/common/exceptions/: http.py
app/common/utils/: datetime_utils.py  encoding.py
app/controllers/: __init__.py  brands.py  categories.py  orders.py  products.py  users.py
app/core/: bootstrap.py  constants.py  enums.py  logger.py  middlewares.py
app/databases/models/: base.py  brands.py  categories.py  orders.py  products.py  users.py
app/db/models/: base.py  products.py
app/domain/adapters/repositories/: __init__.py  base.py  brands.py  categories.py  orders.py  products.py  users.py
app/domain/adapters/unit_of_works/: __init__.py  base.py  brands.py  categories.py  orders.py  products.py  users.py
app/domain/adapters/use_cases/: __init__.py  brands.py  categories.py  orders.py  products.py  users.py
app/domain/models/: __init__.py  base.py  brands.py  categories.py  orders.py  products.py  users.py
app/domain/ports/repositories/: __init__.py  brands.py  categories.py  orders.py  products.py  users.py
app/domain/ports/unit_of_works/: __init__.py  brands.py  categories.py  orders.py  products.py  users.py
app/domain/ports/use_cases/: __init__.py  brands.py  categories.py  orders.py  products.py  users.py
app/entities/: __init__.py  base.py  brands.py  categories.py  orders.py  products.py  users.py
app/framework/: bootstrap.py  containers.py  middlewares.py  routes.py  security.py
app/framework/controllers/: __init__.py
app/framework/controllers/v1/: __init__.py  brands.py  categories.py  orders.py  products.py  users.py
app/framework/views/: brands.py  categories.py  orders.py  products.py  routes.py  users.py
app/framework/views/v1/: brands.py  categories.py  orders.py  products.py  users.py
app/models/: base.py  users.py
app/repositories/: base.py  brands.py  categories.py  users.py
app/services/: __init__.py  brands.py  categories.py  orders.py  products.py  users.py
app/utils/: datetime_utils.py
app/views/: routes.py
app/views/controllers/: __init__.py  brands.py  categories.py  orders.py  products.py  users.py
local/: data_model.json
local/localstack/: create_dynamodb_tables.py  schema.json
src/: bootstrap.py  exceptions.py  logger.py
src/middlewares/: __init__.py  authenticator.py  response_handlers.py
src/models/: __init__.py  base.py  brands.py  categories.py  orders.py  products.py  users.py
src/repositories/: base.py  brands.py  categories.py  orders.py  products.py  users.py
src/services/: brands.py  categories.py  orders.py  products.py  users.py
src/utils/: datetime_utils.py
src/views/: routes.py
src/views/controllers/: brands.py  categories.py  products.py  users.py
tests/: conftest.py
tests/api/: test_brands.py  test_categories.py  test_orders.py  test_products.py  test_users.py
