[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["AnhLT59"]
license = "MIT"
readme = "README.md"

# base dependencies ------------------------------------
[tool.poetry.dependencies]
python = "^3.12"
boto3 = "~1.34.0"
requests = "~2.31.0"
flask = "~3.0.0"
flask-injector = "~0.15.0"
werkzeug = "~3.0.0"
marshmallow = "~3.21.0"
pynamodb = "~6.0.0"
ksuid = "~1.3"
coverage-badge = "^1.1.1"

# Local dependencies. ----------------------------------------
[tool.poetry.group.local.dependencies]
pytest = "~8.2.0"
pytest-cov = "~5.0.0"
moto = "~5.0.0"
faker = "~25.2.0"
pre-commit = "~3.6.0"

# Testing dependencies. -------------------------------------
[tool.poetry.group.test.dependencies]
pytest = "~8.2.0"
pytest-cov = "~5.0.0"
moto = "~5.0.0"
faker = "~25.2.0"

# Production dependencies. ----------------------------------
[tool.poetry.group.prod.dependencies]
uWSGI = "~2.0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# CQA tools --------------------------------------------
[tool.black]
line_length = 119

[tool.isort]
profile = "black"
line_length = 119

[tool.bandit]
exclude_dirs = ["config", "data", "localstack", "migrations", "scripts", "tests"]
