[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["AnhLT59"]

# base dependencies ------------------------------------
[tool.poetry.dependencies]
python = "^3.12"
boto3 = "~1.35.0"
requests = "~2.31.0"
fastapi = "~0.115.0"
pynamodb = "~6.0.0"
ksuid = "~1.3"
pydantic = "~2.9.0"
dependency-injector = "~4.42.0b1"

# Local dependencies. ----------------------------------------
[tool.poetry.group.local.dependencies]
pre-commit = "~3.6.0"
coverage-badge = "^1.1.1"

# Testing dependencies. -------------------------------------
[tool.poetry.group.test.dependencies]
pytest = "~8.3.0"
pytest-cov = "~5.0.0"
moto = "~5.0.0"
mock = "~5.1.0"
httpx = "~0.27.0"
faker = "~25.2.0"

# Production dependencies. ----------------------------------
[tool.poetry.group.prod.dependencies]
uvicorn = "~0.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# CQA tools --------------------------------------------
[tool.black]
line_length = 119

[tool.isort]
profile = "black"
line_length = 119

[tool.bandit]
exclude_dirs = ["config", "data", "localstack", "migrations", "scripts", "tests"]
